# woflang-devrepo

./: .gitignore  CMakeLists.txt  README  README.md  README_TOTAL.md  desktop.ini  file_list.md  main.cpp  plugin_loader.cpp  repl_commands.cpp  text_logo.md  woflang_-_lost,_abandoned_and_wild_ideas.md  woflang_summary.md  woflang_vm_executor.cpp
core/: find_block_end_patch.cpp  template_plugin.cpp  (+6 more)
woflang1/subfolders/woflang2/explorer/: CMakeCache.txt  CMakeLists.txt  woflang.vcxproj
woflang1/subfolders/woflang2/explorer/woflang.dir/Debug/: woflang.exe.recipe
woflang1/subfolders/woflang2/explorer/woflang.dir/Debug/woflang.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog
woflang1/subfolders/woflang2/explorer/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
woflang1/subfolders/woflang3/: CMakeLists.txt
woflang1/subfolders/woflang3/docs/: cheatsheet.md  g-petey_convo.md
woflang1/subfolders/woflang3/plugins/: repl_history_commands.cpp
woflang1/subfolders/woflang3/plugins/constants/: load_physics_constants.cpp
woflang1/subfolders/woflang3/plugins/equation_solver/: ops_symbolic_simplify_rules.cpp  symbolic_solve.cpp
woflang1/subfolders/woflang3/plugins/markov/: repl_suggest_command.cpp
woflang1/subfolders/woflang3/plugins/math/: crypto_ops.cpp  logic_ops.cpp  math_greek.cpp
woflang1/subfolders/woflang3/plugins/metaphysics/: over_unity_op.cpp
woflang1/subfolders/woflang3/plugins/science/: chemistry_ops.cpp
woflang1/subfolders/woflang3/plugins/sigils/: glyph_prophecy_op.cpp  glyph_rain.cpp  void_division_op.cpp
woflang1/subfolders/woflang3/src/: CMakeLists.txt
woflang1/subfolders/woflang3/src/core/: woflang.hpp  woflang_plugin.hpp
woflang1/subfolders/woflang3/src/glyph/: glyph_map.hpp
woflang1/subfolders/woflang3/src/ops/: core_ops.hpp
woflang1/subfolders/woflang3/src/simd/: simd_utf32_avx2.hpp
woflang3/plugins/: CMakeLists.txt  repl_history_commands.cpp
woflang3/plugins/arts/: music_ops.cpp
woflang3/plugins/constants/: load_modellica_constants.cpp  math_constants.cpp
woflang3/plugins/equation_solver/: ops_symbolic_simplify_rules.cpp
woflang3/plugins/math/: logic_ops.cpp  math_greek.cpp
woflang3/plugins/sigils/: egg_op.cpp  forbidden_echo_op.cpp  forbidden_mode.cpp  glyph_rain.cpp  omega_op.cpp  repl_egg_command.cpp
woflang4/: CMakeLists.txt
woflang4/plugins/: fractal_ops.cpp  logic_ops.cpp  math_greek_ops.cpp  music_ops.cpp  plugins_demos.cpp  quantum_2_ops.cpp  quantum_ops.cpp  symbolics_simplifying_ops.cpp
woflang4/src/core/: WofValue.hpp  core_ops.hpp  woflang.cpp  woflang.hpp  wofltype.hpp
woflang4/src/io/: tokenizer.cpp
woflang4/src/repl/: repl_main.cpp
woflang4/src/simd/: simd_utf32.hpp
woflang4/subfolders/woflang2/: CMakeLists.txt  create_woflang_project_structure.sh  load_keybinds.cpp  main.cpp  wof_interpreter.hpp
woflang4/subfolders/woflang2/builds/: main_math.cpp  mystack_extd.txt
woflang4/subfolders/woflang2/core/: wof_interpreter(2).cpp  wof_interpreter_list_stack_patch.hpp  wof_value.hpp
woflang4/subfolders/woflang2/docs/design_docs/: woflang_unicode_named.sfd
woflang4/subfolders/woflang2/docs/real_docs/: README.md  woflang_roadmap_v2.md
woflang4/subfolders/woflang2/explorer/: cmake_install.cmake
woflang4/subfolders/woflang2/glyphs/: dynamic_glyph_loader.cpp  glyphs_math_symbols.tsv
woflang4/subfolders/woflang2/ops/: ops_control_loop.hpp  ops_symbolic_solve_linear(1).cpp  ops_units_assign.cpp  ops_units_math.cpp  wof_trace_scope_dump.cpp
woflang4/subfolders/woflang2/parser/: parse_woflang_simd_merged.cpp
woflang4/subfolders/woflang2/repl/: repl_block_lookup_command.cpp  repl_commends.hpp  repl_keybind_expansion_patch.cpp  repl_plugin_watch_support.cpp  repl_unitdoc_command.cpp  repl_woflsigil_purge.cpp  wof_keybind_io_support.hpp
woflang4/subfolders/woflang2/simd/: simd_selector.hpp  simd_utf32_avx2.hpp
woflang4/subfolders/woflang3/docs/: example_REPL_usage.md
woflang4/subfolders/woflang3/plugins/: CMakeLists.txt
woflang4/subfolders/woflang3/plugins/arts/: kanji_ops.cpp
woflang4/subfolders/woflang3/plugins/equation_solver/: ops_symbolic_solve_linear.cpp
woflang4/subfolders/woflang3/plugins/markov/: markov_suggest.cpp
woflang4/subfolders/woflang3/plugins/math/: mathlib_calculus.cpp
woflang4/subfolders/woflang3/plugins/metaphysics/: entropy_op.cpp  learning_mode.cpp
woflang4/subfolders/woflang3/plugins/sigils/: forbidden_mode.cpp  prophecy_op.cpp  sigil_map_op.cpp
woflang4/subfolders/woflang3/src/repl/: repl_main.cpp
woflang5/: CMakeLists.txt
woflang5/plugins/: CMakeLists.old  chemistry_ops.cpp  crypto_2_ops.alt  crypto_ops.cpp  entropy_op.cpp  fractal_2_ops.alt  kanji_ops.cpp  math_ops.cpp
woflang5/src/core/: woflang.hpp
woflang8/: CMakeLists.txt  README  main.cpp  woflang.rc
woflang8/old_plugs/: chemistry_ops.cpp  crypto_ops.cpp  fractal_ops.cpp  kanji_ops.cpp  math_greek_ops.cpp  prophecy_op.cpp  sample_plugin.cpp
woflang8/plugins/: crypto_ops.cpp  entropy_op.cpp  fractal_ops.cpp  logic_ops.cpp  math_greek_ops.cpp  math_ops.cpp  music.cpp  quantum_ops.cpp  stack_slayer_op.cpp
woflang8/src/core/: woflang.cpp  woflang.hpp
woflang8/src/io/: tokenizer.cpp  tokenizer.hpp
woflang9/: CMakeLists.txt  moses_op.cpp  prime_heck_op.cpp  woflang.sh
woflang9/docs/new_docs/: claude_convo_anjalog_woflang.md
woflang9/plugins/: CMakeLists.txt  assert_op.cpp  chemistry_ops.cpp  chess_ops.cpp  crypto_div-trial.cpp  crypto_ops.cpp  entropy_op.cpp  fractal_ops.cpp  geom_transform_ops.cpp  gradient_hessian_ops.cpp  graph_coloring_ops.cpp  graph_search_ops.cpp  graph_theory_ops.cpp  kanji_ops.cpp  logic_ops.cpp  math_greek_ops.cpp  math_ops.cpp  modexp_ops.cpp  music.cpp  neural_chess_brain.cpp  numeric_diff_ops.cpp  numerica_differentianion.cpp  prime_ops.cpp  prophecy_op.cpp  quantum_ops.cpp  shortest_path_ops.cpp  simple_chess_ops.cpp  stack_slayer_op.cpp  symbolic_calc_ops.cpp  symbolic_engine.hpp  symbolic_logic_ops.cpp  trig_ops.cpp  void_division_op.cpp
woflang9/tests/: run_tests.sh
(+630 files in other folders)
